--- a/UI/view/index.html
+++ b/UI/view/index.html
@@ -34,8 +34,8 @@ This is lam
             var data = {
                 name: $("#name").val(),
                 ip: $("#ip").val(),
-                timestamp: $("#timestamp").val(),
-                lifetime: $("#lifetime").val()
+                timeStamp: $("#timestamp").val(),
+                lifeTime: $("#lifetime").val()
             }
 
             event.preventDefault();
