decrypt in procotol 1 complete

--- a/UI/view/index.html
+++ b/UI/view/index.html
@@ -4,6 +4,7 @@ This is lam
 <head>
     <title>lam is handsome</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -12,7 +13,7 @@ This is lam
     <form>
         Please Type the information below:
         <br>
-        <input type='text' id='name' placeholder="name">
+        <input type='text' id='name' placeholder="name">1
         <br>
         <input type='text' id='ip' placeholder="ip">
         <br>
@@ -20,35 +21,14 @@ This is lam
         <br>
         <input type='text' id='lifetime' placeholder="lifetime">
         <br>
+        <input type='text' id='ClientKey' placeholder="ClientKey">
         <button id="btn">Click me</button>
     </form>
 
 
+<script src="javascripts/crypto.js"></script>
 
 
 
-
-    <script>
-        $("#btn").click(function(event) {
-
-            var data = {
-                name: $("#name").val(),
-                ip: $("#ip").val(),
-                timeStamp: $("#timestamp").val(),
-                lifeTime: $("#lifetime").val()
-            }
-
-            event.preventDefault();
-            $.ajax({
-                type: "post",
-                url: "FirstRequest",
-                datatype: "JSON",
-                data: data,
-                success: function(res){
-                    console.log(res);
-                }
-            })
-        });
-    </script>
 
 </body>
