console and comment ad

--- a/UI/view/index.html
+++ b/UI/view/index.html
@@ -13,7 +13,7 @@ This is lam
     <form>
         Please Type the information below:
         <br>
-        <input type='text' id='name' placeholder="name">1
+        <input type='text' id='name' placeholder="name">
         <br>
         <input type='text' id='ip' placeholder="ip">
         <br>
