--- a/UI/view/index.html
+++ b/UI/view/index.html
@@ -5,7 +5,7 @@
 
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="javascripts/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -72,7 +72,7 @@
 						</span>
 						<h3>LOG IN</h3>
 						<p>Enjoy our service with high security</p>
-						<p><a href="login.html" class="btn btn-white btn-outline">Click me</a></p>
+						<p><a href="/login" class="btn btn-white btn-outline">Click me</a></p>
 					</div>
 				</div>
 				<div class="feature feature-3 animate-box" data-animate-effect="fadeInUp">
@@ -113,12 +113,12 @@
 			</div>
 		</div>
 	</div>
-    
- 
+
+
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="javascripts/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -139,5 +139,3 @@
 
 	</body>
 </html>
-
-
