--- a/UI/view/login.html
+++ b/UI/view/login.html
@@ -1,56 +1,58 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Aesthetic &mdash; Free Website Template, Free HTML5 Template </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"> -->
-	
+
 	<!-- Animate.css -->
-	<link rel="stylesheet" href="../public/javascripts/css/animate.css">
+	<link rel="stylesheet" href="/javascripts/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="../public/javascripts/css/icomoon.css">
+	<link rel="stylesheet" href="/javascripts/css/icomoon.css">
 	<!-- Themify Icons-->
-	<link rel="stylesheet" href="../public/javascripts/css/themify-icons.css">
+	<link rel="stylesheet" href="/javascripts/css/themify-icons.css">
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="../public/javascripts/css/bootstrap.css">
+	<link rel="stylesheet" href="/javascripts/css/bootstrap.css">
 
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="../public/javascripts/css/magnific-popup.css">
+	<link rel="stylesheet" href="/javascripts/css/magnific-popup.css">
 
 	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="../public/javascripts/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="../public/javascripts/css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="/javascripts/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="/javascripts/css/owl.theme.default.min.css">
 
 	<!-- Theme style  -->
-	<link rel="stylesheet" href="../public/javascripts/css/style.css">
+	<link rel="stylesheet" href="/javascripts/css/style.css">
 
 	<!-- Modernizr JS -->
-	<script src="../public/javascripts/js/modernizr-2.6.2.min.js"></script>
+	<script src="/javascripts/js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<header id="gtco-header" class="gtco-cover gtco-cover-xs" role="banner" style="background-image:url(images/img_bg_1.jpg);">
 		<div class="overlay"></div>
@@ -60,14 +62,14 @@
 					<div class="display-t">
 						<div class="display-tc">
 							<h1 class="animate-box" data-animate-effect="fadeInUp">Log In</h1>
-                            <p class="animate-box" data-animate-effect="fadeInUp"><a href="index.html" class="btn btn-white btn-lg btn-outline">Home</a></p>
+							<p class="animate-box" data-animate-effect="fadeInUp"><a href="index.html" class="btn btn-white btn-lg btn-outline">Home</a></p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</header>
-	
+
 	<div class="gtco-section">
 		<div class="gtco-container">
 			<div class="row row-pb-md">
@@ -79,7 +81,7 @@
 								<label class="sr-only" for="name">Name</label>
 								<input type="text" id="name" class="form-control" placeholder="name">
 							</div>
-							
+
 						</div>
 
 						<div class="row form-group">
@@ -102,35 +104,35 @@
 								<input type="text" id="lifetime" class="form-control" placeholder="lifetime">
 							</div>
 						</div>
-                        <div class="row form-group">
+						<div class="row form-group">
 							<div class="col-md-12">
 								<label class="sr-only" for="subject">Subject</label>
 								<input type="password" id="Clientkey" class="form-control" placeholder="Clientkey">
 							</div>
 						</div>
 						<div class="form-group">
-							<input type="submit" value="Send Message" class="btn btn-primary btn-lg">
+							<input  id="btn" value="Send Message" class="btn btn-primary btn-lg">
 						</div>
 
-					</form>		
+					</form>
 				</div>
 				<div class="col-md-5 col-md-push-1 animate-box">
-					
+
 					<div class="gtco-contact-info">
 						<h3>Contact Information</h3>
 						<ul>
 							<div class="col-md-6">
-					<p>Log in with your name,,IP, timestamp,lifetime required and also your Client key which will act as the most important password of yours.</p>
-				</div>
+								<p>Log in with your name,,IP, timestamp,lifetime required and also your Client key which will act as the most important password of yours.</p>
+							</div>
 						</ul>
 					</div>
 
 
 				</div>
 			</div>
-			</div>
-			
 		</div>
+
+	</div>
 	</div>
 
 
@@ -138,25 +140,26 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
-	<script src="../public/javascripts/js/jquery.min.js"></script>
+	<script src="/javascripts/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="../public/javascripts/js/jquery.easing.1.3.js"></script>
+	<script src="/javascripts/js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="../public/javascripts/js/bootstrap.min.js"></script>
+	<script src="/javascripts/js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="../public/javascripts/js/jquery.waypoints.min.js"></script>
+	<script src="/javascripts/js/jquery.waypoints.min.js"></script>
 	<!-- Carousel -->
-	<script src="../public/javascripts/js/owl.carousel.min.js"></script>
+	<script src="/javascripts/js/owl.carousel.min.js"></script>
 	<!-- countTo -->
-	<script src="../public/javascripts/js/jquery.countTo.js"></script>
+	<script src="/javascripts/js/jquery.countTo.js"></script>
 	<!-- Magnific Popup -->
-	<script src="../public/javascripts/js/jquery.magnific-popup.min.js"></script>
-	<script src="../public/javascripts/js/magnific-popup-options.js"></script>
+	<script src="/javascripts/js/jquery.magnific-popup.min.js"></script>
+	<script src="/javascripts/js/magnific-popup-options.js"></script>
 	<!-- Main -->
-	<script src="../public/javascripts/js/main.js"></script>
+	<script src="/javascripts/js/main.js"></script>
+	<!-- MyScript -->
+	<script src="javascripts/crypto.js"></script>
+</body>
 
-	</body>
 </html>
-
